apps/base/ghost/caddy.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
  namespace: ghost-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
        - name: caddy
          image: caddy:2.10.2
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: ghost-caddy-config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
      volumes:
        - name: ghost-caddy-config
          configMap:
            name: ghost-caddy-config
