apps/base/ghost/ghost.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:6.21.0
          ports:
            - name: http
              containerPort: 2368
              protocol: TCP
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - mountPath: /var/lib/ghost/content
              name: ghost-storage
              subPath: content
      volumes:
        - name: ghost-storage
          persistentVolumeClaim:
            claimName: ghost-storage
