apps/base/ghost/caddy.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-service
  namespace: ghost-system
spec:
  selector:
    app: caddy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
