apps/base/ghost/ghost.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
  namespace: ghost-system
spec:
  selector:
    app: ghost
  ports:
    - name: http
      protocal: TCP
      port: 80
      targetPort: 2368
    - name: https
      protocol: TCP
      port: 443
      targetPort: 2368
  type: ClusterIP
