apps/base/ghost/ghost.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  namespace: ghost-system
spec:
  ingressClassName: traefik
  rules:
    - host: tinyrack.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-service
                port:
                  name: http

  tls:
    - hosts:
        - "tinyrack.net"
      secretName: letsencrypt-wildcard-cert-tinyrack.net
